--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Start template</title>
+	<title>Start tools</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
 
 </head>
 <body>
-	<h1>New project</h1>
+	<h1>Start tools</h1>
 	<div class="container">
 		<div class="some">some</div>
 		<div class="item">Roboto Regular</div>
