Add header-1 section

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,44 @@
 <body>
 
 	<header class="header">
+		<section class="header-1">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-2 col-md-1">
+						<div class="header-1__currency">USD <span>28.17</span></div>
+					</div>
+					<div class="col-10 col-md-4 col-xl-5">
+						<div class="header-1__timing">
+							<span class="header-1__timing-item">Пн.-Пт.8:00-21:00</span>
+							<span class="header-1__timing-item">Cб.9:00-20:00</span>
+							<span class="header-1__timing-item">Вс.10:00-19:00</span>
+						</div>
+					</div>
+					<div class="col-6 col-md-3 col-xl-2">
+						<div class="header-1__phone">
+							<a href="#" class="header-1__phone-number">0-800-338-571</a>
+							<div class="header-1__phone-text">Бесплатно по Украине</div>
+						</div>
+					</div>
+					<div class="col-4 col-md-3">
+						<div class="header-1__user">
+							<a href="#" class="header-1__login">Вход</a>
+							<span>/</span>
+							<a href="#" class="header-1__registration">Регистрация</a>
+						</div>
+					</div>
+					<div class="col-2 col-md-1">
+						<div class="header-1__lenguage">ru
+							<ul class="header-1__lenguage-list">
+								<li>ru</li>
+								<li>ua</li>
+							</ul>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="header-3">
 			<div class="container">
 				<div class="header-3-wrap">
