Added bunner section

--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,10 @@
 		<section class="header-1">
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-2 col-md-1">
+					<div class="d-none d-md-block col-2 col-md-1">
 						<div class="header-1__currency">USD <span>28.17</span></div>
 					</div>
-					<div class="col-10 col-md-4 col-xl-5">
+					<div class="d-none d-md-block col-10 col-md-4 col-xl-5">
 						<div class="header-1__timing">
 							<span class="header-1__timing-item">Пн.-Пт.8:00-21:00</span>
 							<span class="header-1__timing-item">Cб.9:00-20:00</span>
@@ -70,11 +70,63 @@
 				</div>
 			</div>
 		</section>
+		<section class="header-2">
+			<div class="header-2-wrap container">
+				<a href="#" class="logo">
+					<img src="img/logo.png" alt="&" class="logo__img">
+					<span class="logo__text">Официальный сайт компании</span>
+				</a>
+				<nav class="nav">
+					<div class="nav__hamburger">
+						<div class="hamburger"><span></span></div>
+					</div>
+					<ul class="nav__list">
+						<li class="nav__item">
+							<a href="#" class="nav__link">Доставка и оплата</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link  nav__link--sub">Блог</a>
+							<ul class="nav__sub">
+								<li class="nav__sub-item">
+									<a href="#" class="nav__sub-link">Новости</a>
+								</li>
+								<li class="nav__sub-item">
+									<a href="#" class="nav__sub-link">Видео</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">Контакты</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link nav__link--sub">Помощь</a>
+							<ul class="nav__sub">
+								<li class="nav__sub-item">
+									<a href="#" class="nav__sub-link">Сервисное обслуживание</a>
+								</li>
+								<li class="nav__sub-item">
+									<a href="#" class="nav__sub-link">Условия сотрудничества</a>
+								</li>
+								<li class="nav__sub-item">
+									<a href="#" class="nav__sub-link">Задать вопрос</a>
+								</li>
+								<li class="nav__sub-item">
+									<a href="#" class="nav__sub-link">Справочные материалы</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+				<div class="header-2__btn">
+					<button class="btn">Дополнительная гарантия</button>
+				</div>
+			</div>
+		</section>
 		<section class="header-3">
 			<div class="container">
 				<div class="header-3-wrap">
 					<div class="catalog">
-						<div class="catalog__humburger"><span></span></div>
+						<div class="hamburger"><span></span></div>
 						<div class="catalog__title">Каталог товаров</div>
 						<ul class="catalog__menu">
 							<li><a class="catlog__category" href="#">Электроинструмент</a></li>
@@ -128,6 +180,30 @@
 			</div>
 		</section>
 	</header>
+
+	<section class="banner">
+		<div class="banner__slider">
+			<div class="banner__item">
+				<img src="img/banner-1.jpg" alt="&">
+				<div class="banner__btn">
+					<button class="btn">Подробнее</button>
+				</div>
+			</div>
+			<div class="banner__item">
+				<img src="img/banner-1.jpg" alt="&">
+				<div class="banner__btn">
+					<button class="btn">Подробнее</button>
+				</div>
+			</div>
+			<div class="banner__item">
+				<img src="img/banner-1.jpg" alt="&">
+				<div class="banner__btn">
+					<button class="btn">Подробнее</button>
+				</div>
+			</div>
+			
+		</div>
+	</section>
 
 	<section class="sales">
 		<div class="container">
