--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,7 @@
 					<button class="btn">Подробнее</button>
 				</div>
 			</div>
-			
+
 		</div>
 	</section>
 
@@ -372,6 +372,164 @@
 
 		</div>
 	</section>
+
+	<section class="brands">
+		<div class="container">
+			<div class="section-title-wrap">
+				<h2 class="section-title">Наши бренды</h2>
+			</div>
+		</div>
+		<div class="brands-wrap">
+			<div class="container">
+				<div class="row">
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-1.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-2.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-3.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-4.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-5.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-6.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-7.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-8.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-9.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-10.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-11.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+					<div class="col-4 col-md-2">
+						<div class="brands__img-wrap"><img src="img/brands-12.jpg" alt="1" class="brands__img"></div
+							class="brands__img-wrap">
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="about">
+		<div class="container">
+			<h1 class="about__title">Электроинструменты и аксессуары в Украине</h1>
+			<p class="about__text">
+				Рано или поздно практически любой взрослый человек сталкивается с необходимостью покупки инструментов для
+				ремонта и строительства.
+				И не важно, кто вы, любитель или профессионал, ведь без специальных средств вам не решить ни одну задачу,
+				касающуюся ремонта
+				в любом его проявлении.
+			</p>
+			<p class="about__text">
+				Выбор инструментов для осуществления различных видов строительных работ на современном рынке достаточно широк:
+				от простых ручных
+				до профессиональных, которые позволяют быстро воплотить ваш самый смелый замысел в жизнь благодаря своим
+				характеристикам.
+			</p>
+			<p class="about__text">
+				Украина сегодня предоставляет большой выбор средств для строительных и ремонтно-отделочных работ.
+			</p>
+			<p class="about__text">
+				Строительство и ремонт всегда требуют немалых затрат и поэтому часто возникает вопрос: «Где можно купить
+				электроинструменты недорого?».
+				Ответ есть! Сегодня множественные производственные компании предлагают свою продукцию для отдельных сегментов
+				потребителей
+				в зависимости от их потребностей и платежеспособности, и поэтому подобрать наиболее оптимальный вариант для себя
+				может каждый.
+			</p>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="footer-1">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-lg-3">
+						<div class="footer__titile">
+							Подписаться на рассылку
+							акционных предложений
+						</div>
+						<form action="#" class="footer__subscribe">
+							<input class="footer__text-area" type="text" name="mail" placeholder="Ваша электронная почта">
+							<button type="submit" class="btn">Подписаться</button>
+						</form>
+						<div class="footer__social">
+							<a href="#" class="footer__social-item"></a>
+							<a href="#" class="footer__social-item"></a>
+							<a href="#" class="footer__social-item"></a>
+							<a href="#" class="footer__social-item"></a>
+						</div>
+					</div>
+					<div class="offset-lg-1 col-6 col-md-2">
+						<div class="footer__titile">Категории</div>
+						<ul class="footer__list">
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Электро-инструмент</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Аккумуляторный инструмент</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Садовый инструмент</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Оборудование</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Запчасти</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Акции</a></li>
+						</ul>
+					</div>
+					<div class="col-6 col-md-2">
+						<div class="footer__titile">Меню</div>
+						<ul class="footer__list">
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Доставка и оплата</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Новости</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Видео</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Контакты</a></li>
+						</ul>
+					</div>
+					<div class="col-6 col-md-2">
+						<div class="footer__titile">Помощь</div>
+						<ul class="footer__list">
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Сервисное обслуживание</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Получить доп. гарантию</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Условия сотрудничества</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Задать вопрос</a></li>
+							<li class="footer__list-item"><a href="#" class="footer__list-link">Справочные материалы</a></li>
+						</ul>
+					</div>
+					<div class="col-6 col-md-2">
+						<div class="footer__titile">Контакты</div>
+						<div class="footer__titile"><a class="footer__phone" href="#">0-800-338-571</a></div>
+						<div class="footer__timing-title">График работы Call-центра</div>
+						<span class="footer__timing-item">Пн-Пт: <span>8:00 - 21:00</span></span>
+						<span class="footer__timing-item">Сб: <span>9:00 - 20:00</span></span>
+						<span class="footer__timing-item">Вс: <span>10:00 - 19:00</span></span>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class="footer-2">© 2019. Все права защищены.</div>
+	</footer>
 
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
