--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+	<link rel="stylesheet" href="css/fontello-codes.css">
 
 	<link rel="stylesheet" href="css/style.min.css">
 
@@ -480,10 +481,10 @@
 							<button type="submit" class="btn">Подписаться</button>
 						</form>
 						<div class="footer__social">
-							<a href="#" class="footer__social-item"></a>
-							<a href="#" class="footer__social-item"></a>
-							<a href="#" class="footer__social-item"></a>
-							<a href="#" class="footer__social-item"></a>
+							<a href="#" class="footer__social-item icon-instagram"></a>
+							<a href="#" class="footer__social-item icon-facebook-circled"></a>
+							<a href="#" class="footer__social-item icon-youtube"></a>
+							<a href="#" class="footer__social-item icon-twitter-circled"></a>
 						</div>
 					</div>
 					<div class="offset-lg-1 col-6 col-md-2">
